Some improvements in PDF.